--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '8082:80'
     volumes:
-      - ./:/var/www
+      - ./:/var/www/bot
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
