--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+BOT_NICKNAME=dev_test_1
+
 MICROSOFT_APP_ID=
 MICROSOFT_APP_KEY=
