Update docker prod

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,7 +9,7 @@ services:
       - 443
     volumes:
       - ./:/var/www/bot
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-prod.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
 
