--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,3 +17,8 @@ services:
     container_name: prod.php
     volumes:
       - ./:/var/www/bot
+
+networks:
+  default:
+    external:
+      name: webproxy
