--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+    environment:
+      VIRTUAL_HOST: dzmitry.xyz
+      LETSENCRYPT_HOST: dzmitry.xyz
 
   php:
     build: Dockerfile-prod
