--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
         "beyondcode/laravel-dump-server": "^1.2",
+        "codacy/coverage": "^1.4",
         "doctrine/dbal": "^2.8",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
