--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: php
 
 php:
-  - 7.1.9
+  - 7.2
 
 before_script:
-  - composer install
+  - cp .env.travis .env
+  - php composer.phar install --no-interaction
 
-script: phpunit --configuration phpunit.xml
+script:
+  - vendor/bin/phpunit
