--- a/docker/prod/Dockerfile-php
+++ b/docker/prod/Dockerfile-php
@@ -23,10 +23,8 @@ RUN touch /var/log/cron.log
 
 ENV APP_ENV = prod
 
-# Copy project and generate key
 COPY . /var/www/bot
 COPY .env.example .env
-RUN php artisan key:generate
 
 # Change permissions
 RUN chmod -R 0777 bootstrap/cache
@@ -34,5 +32,8 @@ RUN chmod -R 0777 storage
 
 # Install dependencies
 RUN php composer.phar install --no-ansi --no-dev --no-interaction --no-progress --optimize-autoloader
+
+# Generate important key
+RUN php artisan key:generate
 
 CMD cron && php-fpm
