Fix bug with unknown provided in console commands

--- a/docker/prod/Dockerfile-php
+++ b/docker/prod/Dockerfile-php
@@ -21,7 +21,7 @@ RUN crontab /etc/cron.d/scheduler-cron
 RUN touch /var/log/cron.log
 # End
 
-ENV APP_ENV = prod
+ENV APP_ENV prod
 
 COPY . /var/www/bot
 COPY .env.example .env
